# VSCode_Stagiaire_E24

./: .gitignore  .gitmodules
UdeS_ExternalTelemetryUnit/: CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml
UdeS_ExternalTelemetryUnit/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
UdeS_ExternalTelemetryUnit/build_1/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
UdeS_ExternalTelemetryUnit/build_1/lib/spark_sdk_v1.3.0/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/lib/usb_console/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/cirrus-logic/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/cjson/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/cmsis/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/hal_nordic/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/hal_wurthelektronik/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/modules/liblc3/: cmake_install.cmake
UdeS_ExternalTelemetryUnit/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map
UdeS_ExternalTelemetryUnit/lib/INA231/: CMakeLists.txt  INA231.c  INA231.h
UdeS_ExternalTelemetryUnit/src/: blinky_Test.code-workspace  hw_cfg.h  main.c
(+107 files in other folders)
